--- a/CollegeTouring/mainwindow.ui
+++ b/CollegeTouring/mainwindow.ui
@@ -577,6 +577,13 @@ border-color: rgb(255, 255, 255);</string>
       </widget>
      </widget>
     </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Created By: Sierra Martin, Erik Nguyen, Brandon Bautista and Belal Zahran&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
