added option to view a specific college

--- a/CollegeTouring/collegelist.ui
+++ b/CollegeTouring/collegelist.ui
@@ -57,19 +57,6 @@
       </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
       <widget class="QLabel" name="totalUnderGradsLabel">
        <property name="styleSheet">
         <string notr="true">font: 700 11pt &quot;Segoe UI&quot;;
@@ -90,6 +77,32 @@ font: 700 10pt &quot;Segoe UI&quot;;</string>
         <string/>
        </property>
       </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Specific College</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBoxCollege"/>
      </item>
      <item>
       <widget class="QLabel" name="label">
